<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/note_task_action"
        android:onClick="onMakeNote"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/title_activity_task_note"/>
    <item
        android:id="@+id/begin_task_action"
        android:onClick="onTaskBegin"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_begin_task"/>
    <item
        android:id="@+id/complete_task_action"
        android:onClick="onTaskComplete"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_complete_task"/>
    <item
        android:id="@+id/cancel_task_action"
        android:onClick="onTaskCancel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_cancel_task"/>

</menu>