<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="@string/path_type" />

    <Spinner
        android:id="@+id/path_type_activity_task_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/path_type_activity_task_note"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="@string/path_surface" />

    <Spinner
        android:id="@+id/path_surface_activity_task_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/path_surface_activity_task_note"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="@string/path_detail" />

    <Spinner
        android:id="@+id/path_detail_activity_task_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/path_detail_activity_task_note"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="@string/note" />

    <EditText
        android:id="@+id/note_activity_task_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView4"
        android:inputType="textMultiLine"
        android:lines="3" >
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/note_activity_task_note"
        android:layout_marginTop="15dp"
        android:onClick="onSave"
        android:text="@string/action_save" />

</RelativeLayout>